--- a/Mc2.CrudTest.Presentation/Server/appsettings.json
+++ b/Mc2.CrudTest.Presentation/Server/appsettings.json
@@ -1,10 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-"AllowedHosts": "*"
+  "ConnectionStrings": {
+    "SqlConnection": "workstation id=ehsantest.mssql.somee.com;packet size=4096;user id=portalbuilder_SQLLogin_1;pwd=dqzk6o4lkk;data source=ehsantest.mssql.somee.com;persist security info=False;initial catalog=ehsantest"
+  }
 }
